            ESP8266: rearange rf_cal_sector (fix #1294)
            ESP8266: Wifi.scan() now return authmode as text 
            ESP32: Fix accidental initialisation of UART3 when switching to Telnet (fix #1362)
            nRF52: Added `NRF.setAddress` to allow the MAC address to be changed

     1v97 : nRF52: fix NRF.on('connect',...) issue
            STM32: Fix setDeviceClockCmd error for USB.setConsole()
            nRF5x: Fix getPinMode, which fixes SW I2C after save()
            Thingy52: Don't report contents of 'Thingy' in 'dump()'
            Thingy52: Allow multiple sounds to play at once
            nRF5x: Ensure Waveform triggers a finished event
            Thingy52: Enable simple bootloader, add travis build for DFU
            Add Serial.inject to allow data to be added as if it was received from that device
            Fix UDP handling so that it copes with packets not all being received in one go
            STM32L496: increase variables - use full 320kB of RAM as it is contiguous
            Add a maximum time for setTimeout/setInterval (100 years)
            Fix Storage.write when writing partial file of the same length and initial contents
            Fix corrupted timer channels returned by Pin.getInfo
            Add command history to debugger
            Remove process.env.EXPORTS (EXPTR does the same but takes less space)
            Thingy52: Add 9 axis MPU support
            Errors now store message in 'message', not 'msg' (fix #1366)
            Ensure 'in' operator checks the prototype chain (fix #1365)
            Promise.resolve now handles promises/thenables as arguments (fix #1363)
            try..catch now creates exception in its own scope (fix #1367)
            Thingy52,Pixl.js: add default NFC URL of the Espruino IDE 
            Add ArrayBuffer.byteLength property (fix #1374)
            setWatch(..., {edge:"rising",debounce:25}) is now default for built-in buttons